# zelda64-old

./: CMakeLists.txt  README.md  vcpkg.json
include/zelda64/: crc32.h  decompressor.h  dma.h  rom.h  yaz0.h  zelda64.h  zpf.h
lib/: crc32.c  crc32.h  decompressor.c  decompressor.h  dma.c  dma.h  rom.c  rom.h  util.h  yaz0.c  yaz0.h  zpf.c
src/: compress.c  compress.h  decompress.c  decompress.h  decompressor.c  main.c  patcher.c  patcher.h  zelda64.h
